--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,10 +17,11 @@ dependencies:
   bonsoir: ^5.1.10
   file_picker: ^8.1.2
   device_info_plus: ^11.1.0
-  uuid: ^4.5.1
   nanoid: ^1.0.0
   riverpod_annotation: ^2.6.1
   fast_immutable_collections: ^10.2.4
+  logger: ^2.4.0
+  socket_io: ^1.0.1
 
 dev_dependencies:
   flutter_test:
