show toast on stream event

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   socket_io: ^1.0.1
   font_awesome_flutter: ^10.7.0
   socket_io_client: ^1.0.2
+  fluttertoast: ^8.2.8
 
 dev_dependencies:
   flutter_test:
