--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "cmake.ignoreCMakeListsMissing": true
+    "cmake.ignoreCMakeListsMissing": true,
+    "dart.flutterSdkPath": "C:\\src\\flutter_win"
+    /*"dart.flutterSdkPath": "C:\\src\\flutter_wsl2"*/
 }
