--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,8 +22,10 @@ dependencies:
   logger: ^2.4.0
   nanoid: ^1.0.0
   riverpod_annotation: ^2.6.1
-  socket_io: ^1.0.1
-  socket_io_client: ^1.0.2
+  dio: ^5.7.0
+  path_provider: ^2.1.5
+  mime: ^2.0.0
+  shelf: ^1.4.1
 
 dev_dependencies:
   flutter_test:
