--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   path_provider: ^2.1.5
   mime: ^2.0.0
   shelf: ^1.4.1
+  animated_list_plus: ^0.5.2
 
 dev_dependencies:
   flutter_test:
