--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: dukti
 description: "A new Flutter project."
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.1+2
+version: 1.0.2+3
 
 environment:
   sdk: '>=3.4.4 <4.0.0'
@@ -27,6 +27,8 @@ dependencies:
   mime: ^2.0.0
   shelf: ^1.4.1
   animated_list_plus: ^0.5.2
+  hooks_riverpod: ^2.6.1
+  flutter_hooks: ^0.20.5
 
 dev_dependencies:
   flutter_test:
