--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -28,5 +28,5 @@ linter:
 # https://dart.dev/guides/language/analysis-options
 
 analyzer:
-  errors:
-    todo: warning
+  # errors:
+  #   todo: warning
