--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   hooks_riverpod: ^2.6.1
   flutter_hooks: ^0.20.5
   markup_text: ^1.0.4
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
