--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter_hooks: ^0.20.5
   markup_text: ^1.0.4
   http: ^1.2.2
+  file_selector: ^1.0.3
 
 dev_dependencies:
   flutter_test:
