android storage permissions

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   http: ^1.2.2
   file_selector: ^1.0.3
   open_file: ^3.5.10
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
